added kmaster venue livebarn and mhr detail dialog
